--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             
             
             <button type="submit" class="login-button">Log In</button>
+            <p id="loginError" class="login-error" aria-live="polite"></p>
         </form>
       </div>
 
