--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Permissions-Policy" content="autoplay=(self),encrypted-media=(self)">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Watchlist</title>
+  <title>your profile</title>
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/profile.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
